# saas-kit

./: .dockerignore  .env  .env.auth  .env.event  .env.prod  .gitattributes  .gitignore  Earthfile  LICENSE.md  README.md  docker-compose.yml  go.mod  go.sum  gqlgen.yml  pyproject.toml  tools.go
.github/workflows/: deploy.yml  main.yml  publish.yml
cmd/auth/: main.go
cmd/dev/: main.go
cmd/dev/migrations/: schemas.down.sql  schemas.up.sql
cmd/event/: main.go
cmd/webbff/: main.go
graph/: schema.resolvers.go
k8s/base/: deployment.yaml  ingress.yaml  service.yaml
k8s/prod/: kustomization.yaml  namespace.yaml
pkg/auth/: api.go  auth.pb.go  db.go  db_mock.go  login.go  revoke.go  run.go  signup.go  signup_test.go  sqlboiler.toml
pkg/auth/dbmodels/: boil_queries.go  boil_table_names.go  boil_types.go  instances.go  profiles.go  psql_upsert.go  tokens.go  users.go
pkg/auth/fixtures/: instances.yml
pkg/auth/migrations/: 0_instances_users.down.sql  (+1 more)
pkg/event/: api.go  db.go  db_mock.go  event.pb.go  event_grpc.pb.go  run.go  sqlboiler.toml  workshops.go
pkg/graph/: schema.resolvers.go  webbff.gql
pkg/lib/: constants.go  env.go  logging.go  run.go  utils.go
pkg/webbff/: api.go  resolver.go  run.go  webbff.gql.go
proto/: event.proto
public/prod/: jwtRS256.key.pub
secret/: setup.md
secret/dev/: auth.env  event.env  jwtRS256.key  webbff.env
secret/prod/: .env  auth.env  event.env  jwtRS256.key  kustomization.yaml  setup.md
test/data/: README.md  jwtRS256.key  jwtRS256.key.pub
test/notebooks/: api.ipynb  requirements.txt
(+25 files in other folders)
