[tool.poetry]
name = "saas-kit"
version = "0.1.0"
description = ""
authors = ["Simon Wehrli <simon@smartnuance.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
nbstripout = "^0.5.0"
requests = "^2.27.1"
ipykernel = "^6.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
